.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Activity__c.object
<CustomObject>
    <description>Represents an activity performed during the management of a Service Request</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Code__c</fullName>
        <description>Unique code identifying the Activity</description>
        <label>Activity Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Name__c</fullName>
        <description>Descriptive name for the Activity</description>
        <label>Activity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__SLA_Detail__c</fullName>
        <description>Concatenation of units and type of units for Service Level Agreement (SLA + SLA Type)</description>
        <formula>IF(
    Incap311__SLA__c  &lt;&gt; 1,
    TEXT(Incap311__SLA__c) + &quot; &quot; + TEXT(Incap311__SLA_Type__c),
    TEXT(Incap311__SLA__c) + &quot; &quot; + LEFT(TEXT(Incap311__SLA_Type__c), LEN(TEXT(Incap311__SLA_Type__c)) - 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__SLA_Type__c</fullName>
        <description>Type of units for the Service Level Agreement</description>
        <label>SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Days</fullName>
                </value>
                <value>
                    <fullName>Calendar Days</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__SLA__c</fullName>
        <description>Number of units for Service Level Agreement</description>
        <label>SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Activity</label>
    <listViews>
        <fullName>Incap311__All</fullName>
        <columns>NAME</columns>
        <columns>Incap311__Activity_Code__c</columns>
        <columns>Incap311__Activity_Name__c</columns>
        <columns>Incap311__SLA__c</columns>
        <columns>Incap311__SLA_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACT-{00000000}</displayFormat>
        <label>Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Incap311__No_Special_Chars_In_Activity_Code</fullName>
        <active>true</active>
        <description>Validates for only alphanumeric, hyphen, and underscore in Activity Code field</description>
        <errorConditionFormula>NOT(REGEX(Incap311__Activity_Code__c, &quot;[a-zA-Z0-9_-]+&quot;))</errorConditionFormula>
        <errorDisplayField>Incap311__Activity_Code__c</errorDisplayField>
        <errorMessage>You must only use alphanumeric (a-z, 0-9), hyphen, or underscore in the Activity Code field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Incap311__Validate_SLA_Fields</fullName>
        <active>true</active>
        <description>Ensure SLA and SLA Type are either both defined or undefined</description>
        <errorConditionFormula>OR(
     AND(
            NOT(ISBLANK(Incap311__SLA__c)),
            ISBLANK(TEXT(Incap311__SLA_Type__c))
      ),
      AND(
             ISBLANK(Incap311__SLA__c),
             NOT(ISBLANK(TEXT(Incap311__SLA_Type__c)))
      )
)</errorConditionFormula>
        <errorMessage>SLA and SLA Type must both be completed or empty</errorMessage>
    </validationRules>
</CustomObject>